--- a/ResortApplication.Web/Views/Villa/Create.cshtml
+++ b/ResortApplication.Web/Views/Villa/Create.cshtml
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div class="card-body border p-4">
-        <form method="POST" class="row">
+        <form method="POST" class="row" enctype="multipart/form-data">
             <div class="pb-3">
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-floating py-2 col-12">
@@ -36,9 +36,7 @@
                     <span asp-validation-for="Sqft" class="text-danger"></span>
                 </div>
                 <div class="form-floating py-2 col-12">
-                    <input asp-for="ImageUrl" class="form-control border shadow"/>
-                    <label asp-for="ImageUrl" class="ms-2"></label>
-                    <span asp-validation-for="ImageUrl" class="text-danger"></span>
+                    <input asp-for="Image" class="form-control border shadow"/>
                 </div>
                 <div class="form-floating py-2 col-12">
                     <input asp-for="Occupancy" class="form-control border shadow"/>
