--- a/ResortApplication.Web/Views/Villa/Delete.cshtml
+++ b/ResortApplication.Web/Views/Villa/Delete.cshtml
@@ -14,50 +14,57 @@
     <div class="card-body border p-4">
         <form method="POST" class="row">
             <input asp-for="Id" hidden="hidden"/>
-            <div class="pb-3">
-                <div class="form-floating py-2 col-12">
-                    <input asp-for="Name" disabled="disabled" class="form-control border shadow"/>
-                    <label asp-for="Name" class="ms-2"></label>
-                </div>
-                <div class="form-floating py-2 col-12">
-                    <input asp-for="Description" disabled="disabled" class="form-control border shadow"/>
-                    <label asp-for="Description" class="ms-2"></label>
-                </div>
-                <div class="form-floating py-2 col-12">
-                    <input asp-for="Price" disabled="disabled" class="form-control border shadow"/>
-                    <label asp-for="Price" class="ms-2"></label>
-                </div>
-                <div class="form-floating py-2 col-12">
-                    <input asp-for="Sqft" disabled="disabled" class="form-control border shadow"/>
-                    <label asp-for="Sqft" class="ms-2"></label>
-                </div>
-                <div class="form-floating py-2 col-12">
-                    <input asp-for="ImageUrl" disabled="disabled" class="form-control border shadow"/>
-                    <label asp-for="ImageUrl" class="ms-2"></label>
-                </div>
-                <div class="form-floating py-2 col-12">
-                    <input asp-for="Occupancy" disabled="disabled" class="form-control border shadow"/>
-                    <label asp-for="Occupancy" class="ms-2"></label>
-                </div>
-                <div class="row pt-2">
-                    <div class="col-6 col-md-3">
-                        <button type="submit" class="btn btn-danger w-100">
-                            <i class="bi bi-trash-fill">
-                                Delete
-                            </i>
-                        </button>
+
+            <div class="col-10">
+                <div class="pb-3">
+                    <div class="form-floating py-2 col-12">
+                        <input asp-for="Name" disabled="disabled" class="form-control border shadow"/>
+                        <label asp-for="Name" class="ms-2"></label>
                     </div>
-                    <div class="col-6 col-md-3">
-                        <a
-                            asp-controller="Villa"
-                            asp-action="Index"
-                            class="btn btn-secondary w-100">
-                            <i class="bi bi-x-circle">
-                                Cancel
-                            </i>
-                        </a>
+                    <div class="form-floating py-2 col-12">
+                        <input asp-for="Description" disabled="disabled" class="form-control border shadow"/>
+                        <label asp-for="Description" class="ms-2"></label>
+                    </div>
+                    <div class="form-floating py-2 col-12">
+                        <input asp-for="Price" disabled="disabled" class="form-control border shadow"/>
+                        <label asp-for="Price" class="ms-2"></label>
+                    </div>
+                    <div class="form-floating py-2 col-12">
+                        <input asp-for="Sqft" disabled="disabled" class="form-control border shadow"/>
+                        <label asp-for="Sqft" class="ms-2"></label>
+                    </div>
+                    <div class="form-floating py-2 col-12">
+                        <input asp-for="ImageUrl" disabled="disabled" class="form-control border shadow"/>
+                        <label asp-for="ImageUrl" class="ms-2"></label>
+                    </div>
+                    <div class="form-floating py-2 col-12">
+                        <input asp-for="Occupancy" disabled="disabled" class="form-control border shadow"/>
+                        <label asp-for="Occupancy" class="ms-2"></label>
+                    </div>
+                    <div class="row pt-2">
+                        <div class="col-6 col-md-3">
+                            <button type="submit" class="btn btn-danger w-100">
+                                <i class="bi bi-trash-fill">
+                                    Delete
+                                </i>
+                            </button>
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <a
+                                asp-controller="Villa"
+                                asp-action="Index"
+                                class="btn btn-secondary w-100">
+                                <i class="bi bi-x-circle">
+                                    Cancel
+                                </i>
+                            </a>
+                        </div>
                     </div>
                 </div>
+            </div>
+            <div class="col-2">
+                <img src="@Model.ImageUrl" alt="@Model.Name" width="100%"
+                     style="border-radius: 5px; border: 1px solid #bbb9b9"/>
             </div>
         </form>
     </div>
