Add Amenity management functionality with CRUD operations and update layout

--- a/ResortApplication.Web/Views/_ViewImports.cshtml
+++ b/ResortApplication.Web/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using ResortApplication.Web.Models
 @using ResortApplication.Domain.Entities
 @using ResortApplication.Web.ViewModels.VillaNumber
+@using ResortApplication.Web.ViewModels.Amenity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
