--- a/ResortApplication.Web/Views/Shared/_Layout.cshtml
+++ b/ResortApplication.Web/Views/Shared/_Layout.cshtml
@@ -39,6 +39,9 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="VillaNumber" asp-action="Index">Villa
                             Number</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Amenity" asp-action="Index">Amenity</a>
+                    </li>
                 </ul>
             </div>
         </div>
