--- a/ResortApplication.Web/Views/_ViewImports.cshtml
+++ b/ResortApplication.Web/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using ResortApplication.Domain.Entities
 @using ResortApplication.Web.ViewModels.VillaNumber
 @using ResortApplication.Web.ViewModels.Amenity
+@using ResortApplication.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
