Add authentication features with login and registration views; implement role-based authorization for controllers

--- a/ResortApplication.Web/Views/Home/Index.cshtml
+++ b/ResortApplication.Web/Views/Home/Index.cshtml
@@ -71,8 +71,8 @@
                 {
                     @foreach (var villa in Model.VillaList)
                     {
-                        <partial name="_VillaCard" model="@villa"/>
-                        <partial name="_VillaModal" model="@villa"/>
+                        <partial name="_VillaCardPartial" model="@villa"/>
+                        <partial name="_VillaModalPartial" model="@villa"/>
                     }
                 }
             </div>
