--- a/ResortApplication.Web/Views/Shared/_Layout.cshtml
+++ b/ResortApplication.Web/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
                     </li>
                 </ul>
             </div>
+            <partial name="_LoginPartial"/>
         </div>
     </nav>
 </header>
