--- a/ResortApplication.Web/Views/Shared/_VillaModalPartial.cshtml
+++ b/ResortApplication.Web/Views/Shared/_VillaModalPartial.cshtml
@@ -1,17 +1,17 @@
-@model Villa
-<div class="modal fade" id="exampleModal-@Model.Id" tabindex="-1" aria-labelledby="exampleModalLabel"
+@model HomeVillaChildViewModel
+<div class="modal fade" id="exampleModal-@Model.Villa.Id" tabindex="-1" aria-labelledby="exampleModalLabel"
      aria-hidden="true">
     <div class="modal-dialog modal-xl" style="border: 1px solid #aaa; border-radius:7px;">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-3 text-success" id="exampleModalLabel">Villa Details - @Model.Name</h1>
+                <h1 class="modal-title fs-3 text-success" id="exampleModalLabel">Villa Details - @Model.Villa.Name</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                         aria-label="Close"></button>
             </div>
             <div class="modal-body m-0">
                 <div class="row">
                     <div class="col-12 col-md-5">
-                        <img src="@Model.ImageUrl" alt="@Model.Name" style="border-radius:10px;" width="100%" />
+                        <img src="@Model.Villa.ImageUrl" alt="@Model.Villa.Name" style="border-radius:10px;" width="100%" />
                     </div>
                     <div class="col-12 col-md-7">
                         <div class="row p-2">
@@ -22,7 +22,7 @@
                                 </p>
                                 <p class="h5 text-white">Villa Amenities</p>
                                 <ul>
-                                    @foreach(var amenity in Model.Amenities)
+                                    @foreach(var amenity in Model.Villa.Amenities)
                                     {
                                         <li>@amenity.Name</li>
                                     }
@@ -31,12 +31,12 @@
                         </div>
                         <div class="row col-12">
                             <span class="text-end p-0 pt-3 m-0">
-                                <span class="float-right">Max Occupancy : @Model.Occupancy adults </span><br />
-                                <span class="float-right pt-1">Villa Size : @Model.Sqft sqft</span><br />
+                                <span class="float-right">Max Occupancy : @Model.Villa.Occupancy adults </span><br />
+                                <span class="float-right pt-1">Villa Size : @Model.Villa.Sqft sqft</span><br />
                                 <p class="text-warning font-weight-bold pt-1">
                                     USD
                                     <span styles="#ff6a00">
-                                        @Model.Price.ToString("c") / night
+                                        @Model.Villa.Price.ToString("c") / night
                                     </span>
                                 </p>
                             </span>
