--- a/ResortApplication.Web/Views/Shared/_Layout.cshtml
+++ b/ResortApplication.Web/Views/Shared/_Layout.cshtml
@@ -51,6 +51,7 @@
 </header>
 <div class="container">
     <main role="main">
+        <div class="loading" style="display: none;" id="loading-spinner"></div>
         @RenderBody()
     </main>
 </div>
