--- a/ResortApplication.Web/Views/Shared/_VillaModalPartial.cshtml
+++ b/ResortApplication.Web/Views/Shared/_VillaModalPartial.cshtml
@@ -10,38 +10,7 @@
             </div>
             <div class="modal-body m-0">
                 <div class="row">
-                    <div class="col-12 col-md-5">
-                        <img src="@Model.Villa.ImageUrl" alt="@Model.Villa.Name" style="border-radius:10px;" width="100%" />
-                    </div>
-                    <div class="col-12 col-md-7">
-                        <div class="row p-2">
-                            <div class="col-12">
-                                <p class="card-title text-warning" style="font-size:xx-large">Name</p>
-                                <p class="card-text" style="font-size:large">
-                                    Description
-                                </p>
-                                <p class="h5 text-white">Villa Amenities</p>
-                                <ul>
-                                    @foreach(var amenity in Model.Villa.Amenities)
-                                    {
-                                        <li>@amenity.Name</li>
-                                    }
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="row col-12">
-                            <span class="text-end p-0 pt-3 m-0">
-                                <span class="float-right">Max Occupancy : @Model.Villa.Occupancy adults </span><br />
-                                <span class="float-right pt-1">Villa Size : @Model.Villa.Sqft sqft</span><br />
-                                <p class="text-warning font-weight-bold pt-1">
-                                    USD
-                                    <span styles="#ff6a00">
-                                        @Model.Villa.Price.ToString("c") / night
-                                    </span>
-                                </p>
-                            </span>
-                        </div>
-                    </div>
+                    @await Html.PartialAsync("_VillaDetailCardPartial", Model.Villa)
                 </div>
             </div>
             <div class="modal-footer">
