Integrate Stripe payment processing; update booking flow and add error handling for booking not found

--- a/ResortApplication.Web/Views/Booking/BookingConfirmation.cshtml
+++ b/ResortApplication.Web/Views/Booking/BookingConfirmation.cshtml
@@ -1,8 +1,12 @@
-@model int
+@model Booking
+@{
+    ViewData["Title"] = "Booking Confirmation";
+    Layout = "_Layout";
+}
 <div class="container  pt-4">
     <div class="col-12 text-center">
         <h1 class="text-success text-center">Your Vacation is Confirmed!</h1>
-        Your Order Number is :  @Model<br />
+        Your Order Number is :  @Model.Id<br />
         <p>You can view all order details in Manage Order Section.</p>
         <img alt="Booking Application" src="~/images/orderConfirmed.jpg" style="border-radius:20px" width="65%" />
     </div>
